--- a/index.html
+++ b/index.html
@@ -6,9 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sketch-An-Etch</title>
     <link rel="stylesheet" href="style.css">
-    <script src="etch.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
-    
+    <div class="toy">
+        <header class="header">
+            <h1>Sketch-An-Etch</h1>
+        </header>
+        <main class="main">
+            <div class="settings">
+                <h2>Settings</h2>
+                <input id="color" type="color"/>
+                <button id="eraser">Eraser</button>
+                <button id="clear">Clear</button>
+                <button id="sizeChange">Change Size</button>
+            </div>
+            <div id="screen" class="screen"></div>
+            <div class="invisible"></div>
+        </main>
+        <footer id="footer">
+            <span class="circle"></span>
+            <h6>Chandler Hildebrandt</h6>
+            <span class="circle"></span>
+        </footer>
+    </div>
 </body>
 </html>
